--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>PC4U</title>
+		<title>PC4U VERANDERD!!!</title>
 		<link href="stylesheet.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
