Revert "titel aangepast"
This reverts commit 58ee05c91cd362c354486cc9a161d7ab86492fb4.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>PC4U VERANDERD!!!</title>
+		<title>PC4U</title>
 		<link href="stylesheet.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
