--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 						<img src="Images/logo.png"/>
 					</div>
 					<div class="slogan">
-						<h1>"Placeholder slogan. Tamama"</h1>
+						<h1>"Placeholder slogan. safi"</h1>
 					</div>
 				</div>
 				<div class="nav">
