--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>PC4U</title>
+		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
 		<link href="stylesheet.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
@@ -10,10 +12,10 @@
 			<div class="top-section">
 				<div class="company">
 					<div class="logo">
-						<img src="Images/logo.png"/>
+						<img src="images/logo.png"/>
 					</div>
 					<div class="slogan">
-						<h1>"Placeholder slogan. safi"</h1>
+						<h1>Het beste, maar dan goedkoper!</h1>
 					</div>
 				</div>
 				<div class="nav">
@@ -25,6 +27,8 @@
 						<li><a href="#">Informatie</a></li>
 					</ul>
 				</div>
+			</div>
+			<div class="main-section">
 			</div>
 		</div>
 	</body>
