slideshow + review erbij gezet

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
 		<link href="stylesheet.css" rel="stylesheet" type="text/css">
+		<link href="style-home.css" rel="stylesheet" type="text/css"> 
 	</head>
 	<body>
 		<div class="container">
@@ -29,6 +30,15 @@
 				</div>
 			</div>
 			<div class="main-section">
+			<div class="review">
+				<h2>Bezoekers beoordeelden ons met:</h2>
+					<img src="images/6stars.png">
+
+				<div class="slideshow">
+					<img src="images/03.png">
+
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
