--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 
 				<div class="slideshow">
 					<img src="images/03.png">
-
+				<h3>Volgs ons ook op social media:</h3>
 					</div>
 				</div>
 			</div>
