Shop.html toegevoegd
Stylesheet (CSS) Moet nog bijgevoegd worden bij de algemene. Wat we
volgende les bekijken.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="nav">
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="#">Shop</a></li>
+						<li><a href="shop.html">Shop</a></li>
 						<li><a href="#">Computers</a></li>
 						<li><a href="#">Reparatie</a></li>
 						<li><a href="#">Informatie</a></li>
