Computers.html toegevoegd + "neplinkjes" shop toegevoegd.

--- a/computers.html
+++ b/computers.html
@@ -36,14 +36,14 @@
 				<div class="categories">
 					<ul>
 						<li><a href="#">Producten</a></li>
-						<li><a href="#">Monitoren</a></li>
-						<li><a href="#">Toetsenborden</a></li>
-						<li><a href="#">Muizen</a></li>
-						<li><a href="#">Harde schijven</a></li>
-						<li><a href="#">Geluidskaarten</a></li>
-						<li><a href="#">Grafische kaarten</a></li>
-						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="#">Netwerkkaarten</a></li>
+						<li><a href="#">Complete PC's</a></li>
+						<li><a href="#">Notebook's</a></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
 						<li></li>
 						<li></li>
 						<li></li>
@@ -96,4 +96,3 @@
 		</div>
 	</body>
 </html>
-
