linkjes 'producten' computers- en shop.html weggehaald

--- a/shop.html
+++ b/shop.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="categories">
 					<ul>
-						<li><a href="#">Producten</a></li>
+						<li>Producten</li>
 						<li><a href="#">Monitoren</a></li>
 						<li><a href="#">Toetsenborden</a></li>
 						<li><a href="#">Muizen</a></li>
