--- a/computers.html
+++ b/computers.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="categories">
 					<ul>
-						<li><a href="#">Producten</a></li>
+						<li>Producten</li>
 						<li><a href="#">Complete PC's</a></li>
 						<li><a href="#">Notebook's</a></li>
 						<li></li>
