--- a/HTML/computers.html
+++ b/HTML/computers.html
@@ -5,15 +5,15 @@
 		<title>PC4U</title>
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
-		<link href="stylesheet.css" rel="stylesheet" type="text/css">
-		<link href="styleshop.css" rel="stylesheet" type="text/css">
+		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
+		<link href="../styleshop.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="container">
 			<div class="top-section">
 				<div class="company">
 					<div class="logo">
-						<img src="images/logo.png"/>
+						<img src="../images/logo.png"/>
 					</div>
 					<div class="slogan">
 						<h1>Het beste, maar dan goedkoper!</h1>
@@ -54,19 +54,19 @@
 					<div class="p-row">
 						<div class="product">
 							<a href="#">
-							<img src="images/computer-placeholder.jpg" alt="placeholder_product">
+							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
 						</div>
 						<div class="product">
 							<a href="#">
-							<img src="images/computer-placeholder.jpg" alt="placeholder_product">
+							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
 						</div>
 						<div class="product">
 							<a href="#">
-							<img src="images/computer-placeholder.jpg" alt="placeholder_product">
+							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
 						</div>
@@ -74,19 +74,19 @@
 					<div class="p-row">
 						<div class="product">
 							<a href="#">
-							<img src="images/computer-placeholder.jpg" alt="placeholder_product">
+							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
 						</div>
 						<div class="product">
 							<a href="#">
-							<img src="images/computer-placeholder.jpg" alt="placeholder_product">
+							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
 						</div>
 						<div class="product">
 							<a href="#">
-							<img src="images/computer-placeholder.jpg" alt="placeholder_product">
+							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
 						</div>
