--- a/HTML/home.html
+++ b/HTML/home.html
@@ -5,14 +5,15 @@
 		<title>PC4U</title>
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
-		<link href="stylesheet.css" rel="stylesheet" type="text/css">
+		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
+		<link href="../style-home.css" rel="stylesheet" type="text/css"> 
 	</head>
 	<body>
 		<div class="container">
 			<div class="top-section">
 				<div class="company">
 					<div class="logo">
-						<img src="images/logo.png"/>
+						<img src="../images/logo.png"/>
 					</div>
 					<div class="slogan">
 						<h1>Het beste, maar dan goedkoper!</h1>
@@ -21,14 +22,24 @@
 				<div class="nav">
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="HTML/shop.html">Shop</a></li>
-						<li><a href="HTML/computers.html">Computers</a></li>
+						<li><a href="#">Shop</a></li>
+						<li><a href="#">Computers</a></li>
 						<li><a href="#">Reparatie</a></li>
 						<li><a href="#">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="main-section">
+				<div class="review">
+					<h2>Bezoekers beoordeelden ons met:</h2>
+					<img src="images/6stars.png">
+				</div>
+				<div class="slideshow">
+					<img src="images/03.png">
+				</div>
+				<div class="social">
+					<h3>Volg ons ook op social media:</h3>
+				</div>
 			</div>
 		</div>
 	</body>
