--- a/HTML/reparatie.html
+++ b/HTML/reparatie.html
@@ -5,15 +5,15 @@
 		<title>PC4U</title>
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
-		<link href="stylesheet.css" rel="stylesheet" type="text/css">
-		<link href="style-home.css" rel="stylesheet" type="text/css"> 
+		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
+		<link href="../stylereparatie.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="container">
 			<div class="top-section">
 				<div class="company">
 					<div class="logo">
-						<img src="images/logo.png"/>
+						<img src="../images/logo.png"/>
 					</div>
 					<div class="slogan">
 						<h1>Het beste, maar dan goedkoper!</h1>
@@ -22,25 +22,35 @@
 				<div class="nav">
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="#">Shop</a></li>
-						<li><a href="#">Computers</a></li>
+						<li><a href="shop.html">Shop</a></li>
+						<li><a href="computers.html">Computers</a></li>
 						<li><a href="#">Reparatie</a></li>
 						<li><a href="#">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="main-section">
-			<div class="review">
-				<h2>Bezoekers beoordeelden ons met:</h2>
-					<img src="images/6stars.png">
-
-				<div class="slideshow">
-					<img src="images/03.png">
-				<h3>Volgs ons ook op social media:</h3>
+				<div class"reparation">
+					<div class="summary">
+						<ul>
+							<li>Analyse*</li>
+							<li>Scherm repareren<li>
+							<ul class="tab">
+								<li>- HP-scherm</li>
+							</ul>
+						</ul>
 					</div>
+					<div class="price">
+						<ul>
+							<li>€195,95</li>
+						</ul>
+					</div>
+				</div>
+				<div class="img-part">
+				</div>
+				<div class="conditions">
 				</div>
 			</div>
 		</div>
 	</body>
 </html>
-
