Plaatjes wilden niet laden + social media buttons toegevoegd
ye tho,

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -32,13 +32,17 @@
 			<div class="main-section">
 				<div class="review">
 					<h2>Bezoekers beoordeelden ons met:</h2>
-					<img src="images/6stars.png">
+					<img src="../images/6stars.png">
 				</div>
 				<div class="slideshow">
-					<img src="images/03.png">
+					<img src="../images/03.png">
 				</div>
 				<div class="social">
 					<h3>Volg ons ook op social media:</h3>
+						<img src="../images/insta.png" alt="instagram">
+						<img src="../images/facebok.png" alt="Facebook">
+						<img src="../images/twitter.png" alt="Twittar">
+						<img src="../images/linkedout.jpg" alt="LinkedIn">
 				</div>
 			</div>
 		</div>
