alt functies erbij gevoegd + titel gerenoveerd

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -13,7 +13,7 @@
 			<div class="top-section">
 				<div class="company">
 					<div class="logo">
-						<img src="../images/logo.png"/>
+						<img src="../images/logo.png" alt="PC4U">
 					</div>
 					<div class="slogan">
 						<h1>Het beste, maar dan goedkoper!</h1>
@@ -31,11 +31,11 @@
 			</div>
 			<div class="main-section">
 				<div class="review">
-					<h2>Bezoekers beoordeelden ons met:</h2>
-					<img src="../images/6stars.png">
+					<h2>Bezoekers beoordeelden ons met: <img src="../images/6stars.png" alt="5 Sterren"></h2>
+						
 				</div>
 				<div class="slideshow">
-					<img src="../images/03.png">
+					<img src="../images/03.png" height="400px" alt="bmw">
 				</div>
 				<div class="social">
 					<h3>Volg ons ook op social media:</h3>
