--- a/HTML/Informatie.html
+++ b/HTML/Informatie.html
@@ -1,10 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Informatie</title>
-</head>
-<body>
-	
-</body>
+
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>PC4U</title>
+		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
+		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
+		<link href="../style-informatie.css" rel="stylesheet" type="text/css">
+	</head>
+	<body>
+		<div class="container">
+			<div class="top-section">
+				<div class="company">
+					<div class="logo">
+						<img src="../images/logo.png"/>
+					</div>
+					<div class="slogan">
+						<h1>Het beste, maar dan goedkoper!</h1>
+					</div>
+				</div>
+				<div class="nav">
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="HTML/shop.html">Shop</a></li>
+						<li><a href="HTML/computers.html">Computers</a></li>
+						<li><a href="#">Reparatie</a></li>
+						<li><a href="HTML/informatie.html">Informatie</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="main-section">
+				<div class="title">
+					<h2>Informatie</h2>
+				</div>
+				<div class="info">
+					<p>
+					Heeft u problemen of andere kwesties die u wilt afhandelen met een werknemer? Hier is onze adress voor het geval u even wilt langskomen om samen het prombleem op te lossen. U kunt ook gerust mailen of even een reactie plaatsen op social media
+					</p>
+					<p>
+					Adres: Terheijdenseweg 350, 4826 AA Breda
+					</p>
+					<p>
+					Telefoon:076 573 3444
+					</p>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
+
