--- a/HTML/Informatie.html
+++ b/HTML/Informatie.html
@@ -41,10 +41,26 @@
 					<p>
 					Adres: Terheijdenseweg 350, 4826 AA Breda
 					</p>
-					<p>
+					<p>	
 					Telefoon:076 573 3444
 					</p>
-				</div>
+					</div>
+					<div id="googleMap" style="width:500px;height:380px;"></div>
+					<script
+					src="http://maps.googleapis.com/maps/api/js">
+					</script>
+
+					<script>
+					function initialize() {
+  					var mapProp = {
+    				center:new google.maps.LatLng(51.508742,-0.120850),
+    				zoom:5,
+    				mapTypeId:google.maps.MapTypeId.ROADMAP
+  					};
+  					var map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
+					}
+					google.maps.event.addDomListener(window, 'load', initialize);
+					</script>
 			</div>
 		</div>
 	</body>
