--- a/HTML/Informatie.html
+++ b/HTML/Informatie.html
@@ -36,13 +36,16 @@
 				</div>
 				<div class="info">
 					<p>
-					Heeft u problemen of andere kwesties die u wilt afhandelen met een werknemer? Hier is onze adress voor het geval u even wilt langskomen om samen het prombleem op te lossen. U kunt ook gerust mailen of even een reactie plaatsen op social media
+					Heeft u problemen of andere kwesties die u wilt afhandelen met een werknemer? Hier is onze adress voor het geval u even wilt langskomen om samen het probleem op te lossen. U kunt ook gerust mailen of even een reactie plaatsen op social media
 					</p>
 					<p>
 					Adres: Terheijdenseweg 350, 4826 AA Breda
 					</p>
 					<p>	
 					Telefoon:076 573 3444
+					</p>
+					<p>
+					E-mail: PH80@rocwb.nl
 					</p>
 					</div>
 					<div id="googleMap" style="width:500px;height:380px;"></div>
@@ -53,8 +56,8 @@
 					<script>
 					function initialize() {
   					var mapProp = {
-    				center:new google.maps.LatLng(51.508742,-0.120850),
-    				zoom:5,
+    				center:new google.maps.LatLng(51.606460,4.778266),
+    				zoom:17,
     				mapTypeId:google.maps.MapTypeId.ROADMAP
   					};
   					var map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
