--- a/HTML/Informatie.html
+++ b/HTML/Informatie.html
@@ -22,11 +22,11 @@
 				</div>
 				<div class="nav">
 					<ul>
-						<li><a href="#">Home</a></li>
-						<li><a href="HTML/shop.html">Shop</a></li>
-						<li><a href="HTML/computers.html">Computers</a></li>
-						<li><a href="#">Reparatie</a></li>
-						<li><a href="HTML/informatie.html">Informatie</a></li>
+						<li><a href="home.html">Home</a></li>
+						<li><a href="shop.html">Shop</a></li>
+						<li><a href="computers.html">Computers</a></li>
+						<li><a href="reparatie.html">Reparatie</a></li>
+						<li><a href="Informatie.html">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
