--- a/HTML/home.html
+++ b/HTML/home.html
@@ -5,8 +5,7 @@
 		<title>PC4U</title>
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
-		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
-		<link href="../style-home.css" rel="stylesheet" type="text/css"> 
+		<link href="../stylesheet.css" rel="stylesheet" type="text/css"> 
 	</head>
 	<body>
 		<div class="container">
@@ -21,11 +20,11 @@
 				</div>
 				<div class="nav">
 					<ul>
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Shop</a></li>
-						<li><a href="#">Computers</a></li>
-						<li><a href="#">Reparatie</a></li>
-						<li><a href="#">Informatie</a></li>
+						<li><a href="home.html">Home</a></li>
+						<li><a href="shop.html">Shop</a></li>
+						<li><a href="computers.html">Computers</a></li>
+						<li><a href="reparatie.html">Reparatie</a></li>
+						<li><a href="informatie.html">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
