--- a/HTML/reparatie.html
+++ b/HTML/reparatie.html
@@ -21,15 +21,18 @@
 				</div>
 				<div class="nav">
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li><a href="home.html">Home</a></li>
 						<li><a href="shop.html">Shop</a></li>
 						<li><a href="computers.html">Computers</a></li>
-						<li><a href="#">Reparatie</a></li>
-						<li><a href="#">Informatie</a></li>
+						<li><a href="reparatie.html">Reparatie</a></li>
+						<li><a href="informatie.html">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="main-section">
+				<div class="title">
+					<h2>Reparatie</h2>
+				</div>
 				<div class"reparation">
 					<div class="summary">
 						<ul>
@@ -47,8 +50,11 @@
 					</div>
 				</div>
 				<div class="img-part">
+					<img src="../images/laptopreparatie.jpg" alt="Laptop reparatie">
 				</div>
 				<div class="conditions">
+					<h3>Voorwaarden</h3>
+					<p><a href="#">Bekijk nu onze algemene voorwaarden!</a><p>
 				</div>
 			</div>
 		</div>
