--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -20,11 +20,11 @@
 				</div>
 				<div class="nav">
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li><a href="home.html">Home</a></li>
 						<li><a href="shop.html">Shop</a></li>
 						<li><a href="computers.html">Computers</a></li>
-						<li><a href="#">Reparatie</a></li>
-						<li><a href="#">Informatie</a></li>
+						<li><a href="reparatie.html">Reparatie</a></li>
+						<li><a href="informatie.html">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
