aantal aanpassingen aan verschillende files

--- a/HTML/Informatie.html
+++ b/HTML/Informatie.html
@@ -36,7 +36,7 @@
 				</div>
 				<div class="info">
 					<p>
-					Heeft u problemen of andere kwesties die u wilt afhandelen met een werknemer? Hier is onze adress voor het geval u even wilt langskomen om samen het probleem op te lossen. U kunt ook gerust mailen of even een reactie plaatsen op social media
+					Heeft u problemen of andere kwesties die u wilt afhandelen met een werknemer? Hier is onze adres voor het geval u even wilt langskomen om samen het probleem op te lossen. U kunt ook gerust mailen of even een reactie plaatsen op social media.
 					</p>
 					<p>
 					Adres: Terheijdenseweg 350, 4826 AA Breda
