--- a/HTML/computers.html
+++ b/HTML/computers.html
@@ -52,19 +52,19 @@
 				<div class="products">
 					<div class="p-row">
 						<div class="product">
-							<a href="#">
+							<a href="productpagina.html">
 							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="#">
+							<a href="productpagina.html">
 							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="#">
+							<a href="productpagina.html">
 							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
@@ -72,19 +72,19 @@
 					</div>
 					<div class="p-row">
 						<div class="product">
-							<a href="#">
+							<a href="productpagina.html">
 							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="#">
+							<a href="productpagina.html">
 							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="#">
+							<a href="productpagina.html">
 							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
 							<h3>Productnaam</h3>
 							</a>
