--- a/HTML/productpagina.html
+++ b/HTML/productpagina.html
@@ -6,6 +6,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
 		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
+		<link href="../styleproduct.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="container">
@@ -24,7 +25,7 @@
 						<li><a href="shop.html">Shop</a></li>
 						<li><a href="computers.html">Computers</a></li>
 						<li><a href="reparatie.html">Reparatie</a></li>
-						<li><a href="informatie.html">Informatie</a></li>
+						<li><a href="Informatie.html">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
@@ -34,7 +35,7 @@
 				</div>
 				<div class="categories">
 					<ul>
-						<li>Producten</li>
+						<li>Shop</li>
 						<li><a href="#">Monitoren</a></li>
 						<li><a href="#">Toetsenborden</a></li>
 						<li><a href="#">Muizen</a></li>
@@ -43,56 +44,16 @@
 						<li><a href="#">Grafische kaarten</a></li>
 						<li><a href="#">Geheugenkaarten</a></li>
 						<li><a href="#">Netwerkkaarten</a></li>
-						<li></li>
-						<li></li>
-						<li></li>
+						<li class="cattab">Computers</li>
+						<li><a href="#">Complete PC's</a></li>
+						<li><a href="#">Notebook's</a></li>
 						<li></li>
 					</ul>
 				</div>
-				<div class="products">
-					<div class="p-row">
-						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
-							</a>
-						</div>
-						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
-							</a>
-						</div>
-						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
-							</a>
-						</div>
-					</div>
-					<div class="p-row">
-						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
-							</a>
-						</div>
-						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
-							</a>
-						</div>
-						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
-							</a>
-						</div>
-					</div>					
+				<div class="productinfo">
+					<img src="../images/computer-placeholder.jpg" alt="Placeholder Computer">
 				</div>
 			</div>
 		</div>
 	</body>
 </html>
-
