Verder met productpagina gegaan + kleine aanpassingen

--- a/HTML/productpagina.html
+++ b/HTML/productpagina.html
@@ -50,8 +50,39 @@
 						<li></li>
 					</ul>
 				</div>
-				<div class="productinfo">
-					<img src="../images/computer-placeholder.jpg" alt="Placeholder Computer">
+				<div class="product-part">
+					<div class="productinfo">
+						<div class="imgproduct">
+							<img src="../images/computer-placeholderr.jpg" alt="Placeholder Computer">
+						</div>
+						<div class="besproduct">
+							<h3>Naam product</h3>
+							<h4>Voorraad</h4>
+							<div class="meter">
+								<span style="width: 80%"></span>
+							</div>
+							<h4>Beschrijving product</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat animi, totam natus exercitationem est, eius itaque, suscipit velit expedita provident quaerat. Quae architecto nobis ex. Consectetur iste, distinctio quaerat reiciendis?</p>
+						</div>
+					</div>
+					<div class="productspecs">
+						<div class="specrow">
+							<p>hefhhghehdghdghd</p>
+							<img src="../images/checkedbox.png" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>ehehfhfhhfhehafhefehfhefhfhe</p>
+							<img src="../images/checkedbox.png" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>hfhefhefhhefhfehefehi</p>
+							<img src="../images/checkedbox.png" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>ghrghghrgghrhgrnsfm</p>
+							<img src="../images/checkedbox.png" alt="checked checkbox">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
