--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -54,6 +54,9 @@
 						<div class="product">
 							<a href="productpagina.html">
 							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
+							<div class="discount">
+								<p>-25%</p>
+							</div>
 							<h3>Productnaam</h3>
 							</a>
 						</div>
@@ -66,6 +69,9 @@
 						<div class="product">
 							<a href="productpagina.html">
 							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
+							<div class="discount">
+								<p>-70%</p>
+							</div>
 							<h3>Productnaam</h3>
 							</a>
 						</div>
