nog meer kleine aanpassingen

--- a/HTML/productpagina.html
+++ b/HTML/productpagina.html
@@ -68,19 +68,45 @@
 					<div class="productspecs">
 						<div class="specrow">
 							<p>hefhhghehdghdghd</p>
-							<img src="../images/checkedbox.png" alt="checked checkbox">
+							<img src="../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
 							<p>ehehfhfhhfhehafhefehfhefhfhe</p>
-							<img src="../images/checkedbox.png" alt="checked checkbox">
+							<img src="../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
 							<p>hfhefhefhhefhfehefehi</p>
-							<img src="../images/checkedbox.png" alt="checked checkbox">
+							<img src="../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
 							<p>ghrghghrgghrhgrnsfm</p>
-							<img src="../images/checkedbox.png" alt="checked checkbox">
+							<img src="../images/checkedbox.ico" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>ehhfhefhekfhekgregsekofsebfhfsbf</p>
+							<img src="../images/checkedbox.ico" alt="checked checkbox">
+						</div>
+					</div>
+					<div class="productspecs">
+						<div class="specrow">
+							<p>hefhhghehdghdghd</p>
+							<img src="../images/checkedbox.ico" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>ehehfhfhhfhehafhefehfhefhfhe</p>
+							<img src="../images/checkedbox.ico" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>hfhefhefhhefhfehefehi</p>
+							<img src="../images/checkedbox.ico" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>ghrghghrgghrhgrnsfm</p>
+							<img src="../images/checkedbox.ico" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>ehhfhefhekfhekgregsekofsebfhfsbf</p>
+							<img src="../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
 				</div>
