kleine bugfix denk

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -39,13 +39,13 @@
 				</div>
 				<div class="slidecontainer">
 						<div class="slideshow">
-							<img class="slide" src="../images/slide1.jpg" alt="winkel">
-							<img class="slide" src="../images/slide5.jpg" alt="winkol">
-							<img class="slide" src="../images/slide2.png" alt="ICT">	
-							<img class="slide" id="slide1" src="../images/slide3.png" alt="ICT winkel">
+							<img class="slide" id="slide1" src="../images/slide1.jpg" alt="winkel">
+							<img class="slide" id="slide2" src="../images/slide5.jpg" alt="winkol">
+							<img class="slide" id="slide3" src="../images/slide2.png" alt="ICT">	
+							<img class="slide" id="slide4" src="../images/slide3.png" alt="ICT winkel">
 						</div>
 				</div>
-				<a href="#" onclick="$('#slide1').ScrollTo()">hoi</a>
+				<a href="#" onclick="$('#slide1').ScrollTo()">Slide1</a>
 
 				<div class="social">
 					<h3>Volg ons ook op social media:</h3>
