commit iets man u know zelf
de social media buttons aangepast + iets met javascript

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -45,8 +45,13 @@
 							<img class="slide" id="slide4" src="../images/slide3.png" alt="ICT winkel">
 						</div>
 				</div>
+			<div class="kyfresh">	
 				<a href="#" onclick="$('#slide1').ScrollTo()">Slide1</a>
-
+				<a href="#" onclick="$('#slide2').ScrollTo()">Slide2</a>
+				<a href="#" onclick="$('#slide3').ScrollTo()">Slide3</a>
+				<a href="#" onclick="$('#slide4').ScrollTo()">Slide4</a>
+				<div class="social">
+			</div>
 				<div class="social">
 					<h3>Volg ons ook op social media:</h3>
 						<img src="../images/insta.png" alt="instagram">
@@ -54,10 +59,12 @@
 						<img src="../images/twitter.png" alt="Twittar">
 						<img src="../images/linkedout.jpg" alt="LinkedIn">
 				</div>
+				</div>
 			</div>
 		</div>
-		<script src="../Javascript/main.jsp"></script>
+		
 		<script src="../Jquery/jquery.min.js"></script>
 		<script src="../Javascript/jquery-scrollto.js"></script>
+		<script src="../Javascript/main.jsp"></script>
 	</body>
 </html>
