Monitoren en producten daarvan gefixt + slideshow gefixt

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -44,8 +44,16 @@
 							<img class="slide" id="slide3" src="../images/slide2.png" alt="ICT">	
 							<img class="slide" id="slide4" src="../images/slide3.png" alt="ICT winkel">
 						</div>
+					
+						<div class="slideup">
+							<img id="slideup-l" src="../images/arrleft.png" alt="Slide left">
+						</div>
+						<div class="slideup">
+							<img id="slideup-r" src="../images/arrright.png" alt="Slide right">
+						</div>
 				</div>
-				<a href="#" onclick="$('#slide1').ScrollTo()">Slide1</a>
+				<!-- <button id="slideup-l">Slide left</button>
+				<button id="slideup-r">Slide right</button> -->
 
 				<div class="social">
 					<h3>Volg ons ook op social media:</h3>
@@ -56,8 +64,8 @@
 				</div>
 			</div>
 		</div>
-		<script src="../Javascript/main.jsp"></script>
 		<script src="../Jquery/jquery.min.js"></script>
 		<script src="../Javascript/jquery-scrollto.js"></script>
+		<script src="../Javascript/main.js"></script>
 	</body>
 </html>
