--- a/HTML/monitoren/monitoren.html
+++ b/HTML/monitoren/monitoren.html
@@ -5,14 +5,14 @@
 		<title>PC4U</title>
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
-		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
+		<link href="../../stylesheet.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="container">
 			<div class="top-section">
 				<div class="company">
 					<div class="logo">
-						<img src="../images/logo.png"/>
+						<img src="../../images/logo.png"/>
 					</div>
 					<div class="slogan">
 						<h1>Het beste, maar dan goedkoper!</h1>
@@ -20,22 +20,22 @@
 				</div>
 				<div class="nav">
 					<ul>
-						<li><a href="home.html">Home</a></li>
-						<li><a href="shop.html">Shop</a></li>
-						<li><a href="computers.html">Computers</a></li>
-						<li><a href="reparatie.html">Reparatie</a></li>
-						<li><a href="informatie.html">Informatie</a></li>
+						<li><a href="../home.html">Home</a></li>
+						<li><a href="../shop.html">Shop</a></li>
+						<li><a href="../computers.html">Computers</a></li>
+						<li><a href="../reparatie.html">Reparatie</a></li>
+						<li><a href="../informatie.html">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="main-section">
 				<div class="title">
-					<h2>Voor 16:00 besteld, morgen in huis!</h2>
+					<h2>Monitoren</h2>
 				</div>
 				<div class="categories">
 					<ul>
 						<li>Producten</li>
-						<li><a href="monitoren/monitoren.html">Monitoren</a></li>
+						<li><a href="#">Monitoren</a></li>
 						<li><a href="#">Toetsenborden</a></li>
 						<li><a href="#">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
@@ -52,47 +52,47 @@
 				<div class="products">
 					<div class="p-row">
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
+							<a href="ACERK242HLABID.html">
+							<img src="../../images/acer_monitor.png" alt="acer monitor">
 							<div class="discount">
 								<p>-25%</p>
 							</div>
-							<h3>Productnaam</h3>
+							<h3>ACER K242HLABID</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
+							<a href="ASUSVS247HR.html">
+							<img src="../../images/ASUS-VS247HR.png" alt="asus monitor">
+							<h3>ASUS VS247HR</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
+							<a href="ASUSVG248QE.html">
+							<img src="../../images/ASUS-VG248QE.png" alt="asus monitor">
 							<div class="discount">
 								<p>-70%</p>
 							</div>
-							<h3>Productnaam</h3>
+							<h3>ASUS VG248QE</h3>
 							</a>
 						</div>
 					</div>
 					<div class="p-row">
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
+							<a href="BENQRL2755HM.html">
+							<img src="../../images/BENQ-RL2755HM.png" alt="benq monitor">
+							<h3>BENQ RL2755HM</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
+							<a href="LG29UM57-P.html">
+							<img src="../../images/LG-29UM57-P.png" alt="lg monitor">
+							<h3>LG 29UM57-P</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
+							<a href="Applethunderbold.html">
+							<img src="../../images/APPLE-Thunderbolt-Display-(27-inch).png" alt="Apple monitor">
+							<h3>APPLE THUNDERBOLT</h3>
 							</a>
 						</div>
 					</div>					
