link toegevoegd @ insta

--- a/HTML/home-buttonslide.html
+++ b/HTML/home-buttonslide.html
@@ -39,7 +39,7 @@
 				</div>
 				<div class="slidecontainer">
 						<div class="slideshow">
-							<img class="slide" id="slide1" src="../images/slide1.jpg" alt="winkel">
+							<img class="slide" id="slide1" src="../images/slide1.jpg" alt="instagram">
 							<img class="slide" id="slide2" src="../images/slide5.jpg" alt="winkol">
 							<img class="slide" id="slide3" src="../images/slide2.png" alt="ICT">	
 							<img class="slide" id="slide4" src="../images/slide3.png" alt="ICT winkel">
@@ -54,7 +54,9 @@
 				</div>
 				<div class="social">
 					<h3>Volg ons ook op social media:</h3>
+					<a href="http:\\www.instagram.com">
 						<img src="../images/insta.png" alt="instagram">
+					</a>
 						<img src="../images/facebok.png" alt="Facebook">
 						<img src="../images/twitter.png" alt="Twittar">
 						<img src="../images/linkedout.jpg" alt="LinkedIn">
