--- a/HTML/home.html
+++ b/HTML/home.html
@@ -39,7 +39,9 @@
 				</div>
 				<div class="slidecontainer">
 						<div class="slideshow">
-							<img class="slide" id="slide1" src="../images/slide1.jpg" alt="winkel">
+							<a href="http://www.instagram.nl">
+								<img class="slide" id="slide1" src="../images/slide1.jpg" alt="instagram">
+							</a>
 							<img class="slide" id="slide2" src="../images/slide5.jpg" alt="winkol">
 							<img class="slide" id="slide3" src="../images/slide2.png" alt="ICT">	
 							<img class="slide" id="slide4" src="../images/slide3.png" alt="ICT winkel">
